--- a/menu.html
+++ b/menu.html
@@ -42,17 +42,22 @@
             margin-bottom: 20px;
         }
         .menu-lateral .nav-buttons button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-             border: none;
-  color: white;
-  padding: 14px 28px;
-  cursor: pointer;
-  border-radius: 5px;
-  /* Color base del botón */
-  transition: transform 0.3s ease-in-out; /* Transición suave del efecto de pulsación */
- background-image: linear-gradient(to right, #6c757d, #adb5bd);
+          width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    cursor: pointer;
+    border-radius: 5px;
+    /* Color base del botón */
+    transition: transform 0.3s ease-in-out; /* Transición suave del efecto de pulsación */
+    background-image: linear-gradient(to right, #6c757d, #adb5bd);
+    text-align: center; /* Asegura que el texto esté centrado horizontalmente */
+    line-height: normal; /* Esto es para evitar que el texto se desplace */
+    display: flex; /* Usamos flexbox */
+    justify-content: center; /* Centrado horizontal */
+    align-items: center; /* Centrado vertical */
 
         }
         .menu-lateral .nav-buttons button:hover {
