--- a/menu.html
+++ b/menu.html
@@ -99,12 +99,12 @@
         <button id="amenazaDecrement">-</button>
     </div>
 
-    <div class="nav-buttons">
-        <button onclick="window.location.href='tesoros.html'">Tesoros</button>
-        <button onclick="window.location.href='objetos_legendarios.html'">Objetos Legendarios</button>
-        <button onclick="window.location.href='eventos.html'">Eventos</button>
-        <button onclick="window.location.href='trampas.html'">Trampas</button>
-    </div>
+   <div class="nav-buttons">
+    <button onclick="window.top.location.href='tesoros.html'">Tesoros</button>
+    <button onclick="window.top.location.href='objetos_legendarios.html'">Objetos Legendarios</button>
+    <button onclick="window.top.location.href='eventos.html'">Eventos</button>
+    <button onclick="window.top.location.href='trampas.html'">Trampas</button>
+</div>
 </div>
 
 <!-- Añadimos el elemento de audio -->
