--- a/menu.html
+++ b/menu.html
@@ -42,8 +42,8 @@
             margin-bottom: 20px;
         }
         .menu-lateral .nav-buttons button {
-            width: 100%;
-            padding: 10px;
+            width: 50%;
+            <!--padding: 10px;-->
             margin-top: 10px;
             border: none;
             color: white;
