--- a/menu.html
+++ b/menu.html
@@ -68,6 +68,7 @@
             color: yellow;
             font-weight: bold;
             display: none;
+ text-align: center;
         }
     </style>
 </head>
@@ -76,10 +77,11 @@
 <div class="menu-lateral">
     <div class="section">
         <h2>Moral</h2>
-        <p id="alerta" class="alerta">Todos Sufren -20 DET</p>
+        
 
         <label>Max. <input id="maxMoral" type="number" value="18" min="1" max="20"></label><br><br>
-        <label>Med. <input id="medMoral" type="number" value="9" readonly></label><br><br>
+        <label>Med. <input id="medMoral" type="number" value="9" readonly></label>
+<p  id="alerta" class="alerta">Todos Sufren -20 DET</p><br><br>
         <label>Moral Actual <input id="moralActual" type="number" value="14" min="1" max="20"></label>
         <button id="moralIncrement">+</button>
         <button id="moralDecrement">-</button>
