--- a/menu.html
+++ b/menu.html
@@ -79,7 +79,7 @@
         <h2>Moral</h2>
         
 
-        <label>Max. <input id="maxMoral" type="number" value="18" min="1" max="20"></label><br><br>
+        <label>Max. <input id="maxMoral" type="number" value="18" min="1" max="20"></label>
         <label>Med. <input id="medMoral" type="number" value="9" readonly></label>
 <p  id="alerta" class="alerta">Todos Sufren -20 DET</p><br><br>
         <label>Moral Actual <input id="moralActual" type="number" value="14" min="1" max="20"></label>
