--- a/menu.html
+++ b/menu.html
@@ -171,7 +171,7 @@
             minAmenaza.value = localStorage.getItem('minAmenaza');
         }
         if (localStorage.getItem('maxAmenaza')) {
-            minAmenaza.value = localStorage.getItem('maxAmenaza');
+            maxAmenaza.value = localStorage.getItem('maxAmenaza');
         }
 
         if (localStorage.getItem('eventoAmenaza')) {
