--- a/menu.html
+++ b/menu.html
@@ -81,14 +81,14 @@
 
 <div class="menu-lateral">
     <div class="section">
-        <h2>Moral</h2>
+        <h2>Moral del Grupo</h2>
         
 
       <div class="input-group">
     <label>Max. <input id="maxMoral" type="number" value="18" min="1" max="20"></label>
     <label>Med. <input id="medMoral" type="number" value="9" readonly></label>
 </div>
-
+<br>
 <p  id="alerta" class="alerta">Todos Sufren -20 DET</p>
         <label>Moral Actual <input id="moralActual" type="number" value="14" min="1" max="20"></label>
         <button id="moralIncrement">+</button>
@@ -96,12 +96,12 @@
     </div>
 
     <div class="section">
-        <h2>Amenaza</h2>
+        <h2>Nivel de Amenaza</h2>
 <div class="input-group">
     <label>Min. <input id="minAmenaza" type="number" value="2" min="1" max="20"></label>
     <label>Max. <input id="maxAmenaza" type="number" value="20" min="1" max="20"></label>
 </div>
-
+<br>
         
         <label>Evento <input id="eventoAmenaza" type="number" value="12" min="1" max="20"></label><br><br>
         <label>Amenaza Actual <input id="amenazaActual" type="number" value="7" min="1" max="20"></label>
