--- a/menu.html
+++ b/menu.html
@@ -74,7 +74,7 @@
     display: inline-block;
     margin-right: 20px; /* Espacio entre los elementos */
 }
-
+.h2{text-align: center;}
     </style>
 </head>
 <body>
