--- a/menu.html
+++ b/menu.html
@@ -197,7 +197,7 @@
 
         if (currentMoral < currentMed) {
             alerta.style.display = 'block';
-		if(currentMoral = currentMed-1)
+		if(currentMoral == currentMed-1)
 {
             moralBajaAudio.play();}
         } else {
