--- a/menu.html
+++ b/menu.html
@@ -117,8 +117,8 @@
     </div>
 </div>
 
-<audio id="moralBajaAudio" src="sonidos/moral_baja.MP3" preload="auto"></audio>
-<audio id="eventoAmenazaAudio" src="sonidos/evento_amenaza.MP3" preload="auto"></audio>
+<audio id="moralBajaAudio" src="sonidos/moral_baja.mp3" preload="auto"></audio>
+<audio id="eventoAmenazaAudio" src="sonidos/evento_amenaza.mp3" preload="auto"></audio>
 
 <script>
     // Funcionalidad de Moral
