--- a/menu.html
+++ b/menu.html
@@ -212,7 +212,7 @@
         const currentAmenaza = parseInt(amenazaActual.value);
         const currentEvento = parseInt(eventoAmenaza.value);
 
-        if (currentAmenaza == currentMed) {
+        if (currentAmenaza == currentEvento) {
             
 	    eventoAmenazaAudio.play();
         } else {
