--- a/menu.html
+++ b/menu.html
@@ -104,7 +104,8 @@
         
         <label>Evento <input id="eventoAmenaza" type="number" value="12" min="1" max="20"></label><br><br>
         <label>NA. Actual <input id="amenazaActual" type="number" value="7" min="1" max="20"></label>
-        <button id="amenazaIncrement">+</button>
+        <button id="amenazaIncrement" style="background-color: green; color: white;">+</button>
+
         <button id="amenazaDecrement">-</button>
     </div>
 
