--- a/menu.html
+++ b/menu.html
@@ -90,8 +90,8 @@
 <br>
 <p  id="alerta" class="alerta">Todos Sufren -20 DET</p>
         <label>Moral Actual <input id="moralActual" type="number" value="14" min="1" max="20"></label>
-        <button id="moralIncrement">+</button>
-        <button id="moralDecrement">-</button>
+        <button id="moralIncrement" style="background-color: green; color: white;">+</button>
+        <button id="moralDecrement" style="background-color: red; color: white;">-</button>
     </div>
 
     <div class="section">
@@ -106,7 +106,7 @@
         <label>NA. Actual <input id="amenazaActual" type="number" value="7" min="1" max="20"></label>
         <button id="amenazaIncrement" style="background-color: green; color: white;">+</button>
 
-        <button id="amenazaDecrement">-</button>
+        <button id="amenazaDecrement" style="background-color: red; color: white;">-</button>
     </div>
 
     <div class="nav-buttons">
